--- a/test_mqtt_ssl_tls/pubspec.yaml
+++ b/test_mqtt_ssl_tls/pubspec.yaml
@@ -52,12 +52,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/certs_ubuntu/mqtt_ca.crt
-     - assets/certs_ubuntu/mqtt_client.crt
-     - assets/certs_ubuntu/mqtt_client.key
-     - assets/certs_localhost/mqtt_ca.crt
-     - assets/certs_localhost/mqtt_client.crt
-     - assets/certs_localhost/mqtt_client.key
+    - assets/
+    - assets/certs_ubuntu/mqtt_ca.crt
+    - assets/certs_ubuntu/mqtt_client.crt
+    - assets/certs_ubuntu/mqtt_client.key
+    - assets/certs_localhost/mqtt_ca.crt
+    - assets/certs_localhost/mqtt_client.crt
+    - assets/certs_localhost/mqtt_client.key
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
